--- a/codeshare/newAuthorize.html
+++ b/codeshare/newAuthorize.html
@@ -8,16 +8,39 @@
 </head>
 <body>
 
+    <nav class="navbar navbar-inverse" role="navigation">
+        <div class="container-fluid">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-9">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="index.html">CodeShare</a>
+            </div>
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-9">
+                <ul class="nav navbar-nav">
+                    <li class="active"><a href="index.html">申请授权</a></li>
+                    <li><a href="rbdConfig.html">参数设置</a></li>
+                    <li><a href="synchronize.html">数据同步</a></li>
+                </ul>
+            </div><!-- /.navbar-collapse -->
+        </div><!-- /.container-fluid -->
+    </nav>
+
     <div class="container">
 
         <!--******************操作区域start********************-->
-        <div class="oper_section">
-            <div class="col-sm-offset-2">
-                <button type="button" class="btn btn-sm btn-default">返回</button>
-                <button type="button" class="btn btn-sm btn-default">保存</button>
-                <button type="button" class="btn btn-sm btn-default">保存并申请</button>
-                <button type="button" class="btn btn-sm btn-default">清空</button>
-                <button type="button" class="btn btn-sm btn-default">取消</button>
+        <div class="oper_section" style="margin-top: 10px">
+            <div class="col-sm-offset-1">
+                <button type="button" class="btn  btn-default" onclick="window.location.href='index.html'">返回</button>
+                <button type="button" class="btn  btn-default">保存</button>
+                <button type="button" class="btn  btn-primary">保存并申请</button>
+                <button type="button" class="btn  btn-default">清空</button>
             </div>
         </div>
         <!--******************操作区域end********************-->
@@ -25,42 +48,74 @@
             <hr>
             <form class="form-horizontal" role="form">
                 <div class="form-group">
-                    <label for="inputEmail3" class="col-sm-2 control-label">市场方</label>
-                    <div class="col-sm-6">
-                    <input type="text" class="form-control" id="inputEmail3" placeholder="市场方">
+                    <label for="inputEmail3" class="col-sm-1 control-label">
+                        <svg class="icon" aria-hidden="true">
+                            <use xlink:href="#icon-bitian"></use>
+                        </svg>
+                        市场方
+                    </label>
+                    <div class="col-sm-3">
+                        <input type="text" class="form-control" id="inputEmail3" placeholder="市场方" value="CA" readonly="readonly">
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="inputPassword3" class="col-sm-2 control-label">承运方</label>
-                    <div class="col-sm-6">
+                    <label for="inputPassword3" class="col-sm-1 control-label">
+                        <svg class="icon" aria-hidden="true">
+                            <use xlink:href="#icon-bitian"></use>
+                        </svg>
+                        承运方
+                    </label>
+                    <div class="col-sm-3">
                         <input type="text" class="form-control" id="inputPassword3" placeholder="承运方">
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="inputPassword3" class="col-sm-2 control-label">始发地</label>
-                    <div class="col-sm-6">
+                    <label for="inputPassword3" class="col-sm-1 control-label">
+                        <svg class="icon" aria-hidden="true">
+                            <use xlink:href="#icon-bitian"></use>
+                        </svg>
+                        始发地
+                    </label>
+                    <div class="col-sm-3">
                         <input type="text" class="form-control" id="inputPassword3" placeholder="始发地">
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="inputPassword3" class="col-sm-2 control-label">目的地</label>
-                    <div class="col-sm-6">
+                    <label for="inputPassword3" class="col-sm-1 control-label">
+                        <svg class="icon" aria-hidden="true">
+                            <use xlink:href="#icon-bitian"></use>
+                        </svg>
+                        目的地
+                    </label>
+                    <div class="col-sm-3">
                         <input type="text" class="form-control" id="inputPassword3" placeholder="目的地">
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="inputPassword3" class="col-sm-2 control-label">同步策略</label>
-                    <div class="col-sm-6">
-                        <input type="text" class="form-control" id="inputPassword3" placeholder="同步策略">
+                    <label for="inputPassword3" class="col-sm-1 control-label">
+                        <svg class="icon" aria-hidden="true">
+                            <use xlink:href="#icon-bitian"></use>
+                        </svg>
+                        舱位代码
+                    </label>
+                    <div class="col-sm-3">
+                        <input type="text" class="form-control" id="inputPassword3" placeholder="多个用/分隔" maxlength="50">
                     </div>
                 </div>
 
                 <div class="form-group">
-                    <label for="inputPassword3" class="col-sm-2 control-label">同步策略</label>
-                    <div class="col-sm-6">
+                    <label for="inputPassword3" class="col-sm-1 control-label">
+                        <svg class="icon" aria-hidden="true">
+                            <use xlink:href="#icon-bitian"></use>
+                        </svg>
+                        同步策略
+                    </label>
+                    <div class="col-sm-3">
                         <select name="" id="" class="form-control">
                             <option value="">选择</option>
-                            <option value="1">1</option>
+                            <option value="1">自动</option>
+                            <option value="1">手工</option>
+                            <option value="1">不同步</option>
                         </select>
                     </div>
                 </div>
@@ -73,5 +128,6 @@
 
    <script type="text/javascript" src="./public/jquery/jquery.js"></script>
    <script type="text/javascript" src="./public/bootstrap/js/bootstrap.js"></script>
+    <script type="text/javascript" src="iconfont.js"></script>
 </body>
 </html>
