--- a/codeshare/index_bac.html
+++ b/codeshare/index_bac.html
@@ -50,28 +50,28 @@
                     <form class="form-inline" role="form">
                         <div class="query_row">
                             <div class="form-group">
-                                <label class="control-label" for="exampleInputEmail2">市场方</label>
-                                <input type="text" class="form-control input-sm"  placeholder="市场方"/>
+                                <label class="control-label" for="a0001">市场方</label>
+                                <input id="a0001" type="text" class="form-control input-sm"  placeholder="市场方"/>
                             </div>
 
                             <div class="form-group">
-                                <label class="control-label" for="exampleInputPassword2">承运方</label>
-                                <input type="text" class="form-control input-sm"  placeholder="承运方"/>
+                                <label class="control-label" for="a002">承运方</label>
+                                <input id ="a002" type="text" class="form-control input-sm"  placeholder="承运方"/>
                             </div>
 
                             <div class="form-group">
-                                <label class="control-label" for="exampleInputPassword2">始发地</label>
-                                <input type="text" class="form-control input-sm"  placeholder="始发地"/>
+                                <label class="control-label" for="a003">始发地</label>
+                                <input id = "a003" type="text" class="form-control input-sm"  placeholder="始发地"/>
                             </div>
 
                             <div class="form-group">
-                                <label class="control-label" for="exampleInputPassword2">目的地</label>
-                                <input type="text" class="form-control input-sm"  placeholder="目的地"/>
+                                <label class="control-label" for="a004">目的地</label>
+                                <input id ="a004" type="text" class="form-control input-sm"  placeholder="目的地"/>
                             </div>
 
                             <div class="form-group">
-                                <label class="control-label" for="exampleInputPassword2">状态</label>
-                                <select name=""  class="form-control input-sm">
+                                <label class="control-label" for="a005">状态</label>
+                                <select id = "a005" name=""  class="form-control input-sm">
                                     <option value="">选择</option>
                                     <option value="1">未申请</option>
                                     <option value="2">待授权</option>
@@ -82,8 +82,8 @@
                             </div>
 
                              <div class="form-group">
-                                <label class="control-label" for="exampleInputPassword2">同步策略</label>
-                                <select name=""  class="form-control input-sm" >
+                                <label class="control-label" for="a006">同步策略</label>
+                                <select id ="a006" name=""  class="form-control input-sm" >
                                     <option value="">选择</option>
                                     <option value="1">自动</option>
                                     <option value="2">手工</option>
@@ -92,8 +92,8 @@
                             </div>
 
                             <div class="form-group">
-                                <label class="control-label" for="exampleInputPassword2">舱位代码</label>
-                                <input type="text" class="form-control input-sm" style="width:150px;" placeholder="多个用/分隔" maxlength="30"/>
+                                <label class="control-label" for="ca_a007">舱位代码</label>
+                                <input id ="ca_a007" type="text" class="form-control input-sm" style="width:150px;" placeholder="多个用/分隔" maxlength="30"/>
                             </div>
 
                             <div class="pull-right">
