--- a/codeshare/rbdConfig.html
+++ b/codeshare/rbdConfig.html
@@ -76,7 +76,7 @@
                     </div>
                 </div>
 
-                <div class="query_row">
+                <div class="query_row mtop3">
                     <div class="form-group">
                         <label class="control-label" for="exampleInputEmail2">销售生效日期</label>
                         <input type="text" class="form-control input-sm" style="width:130px;" />
