--- a/codeshare/index.html
+++ b/codeshare/index.html
@@ -43,8 +43,8 @@
                         <input type="checkbox" id = "mySwitch" checked
                                data-on-text="市场方" data-off-text="承运方"
                                data-on-color="primary" data-off-color="info"
-                               data-label-text="我是"
-                               data-handle-width="100"/>
+                               data-label-text="角色"
+                               data-handle-width="300"/>
                     </div>
                 </div>
 
