--- a/codeshare/newAuthorize.html
+++ b/codeshare/newAuthorize.html
@@ -5,6 +5,7 @@
     <title>newAuthorize（授权编辑页）</title>
     <link rel="stylesheet" href="./public/bootstrap/css/bootstrap.css"/>
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./public/iconfont/iconfont.css"/>
 </head>
 <body>
 
@@ -49,9 +50,7 @@
             <form class="form-horizontal" role="form">
                 <div class="form-group">
                     <label for="inputEmail3" class="col-sm-1 control-label">
-                        <svg class="icon" aria-hidden="true">
-                            <use xlink:href="#icon-bitian"></use>
-                        </svg>
+                        <i class="icon iconfont icon-bitian red"></i>
                         市场方
                     </label>
                     <div class="col-sm-3">
@@ -60,9 +59,7 @@
                 </div>
                 <div class="form-group">
                     <label for="inputPassword3" class="col-sm-1 control-label">
-                        <svg class="icon" aria-hidden="true">
-                            <use xlink:href="#icon-bitian"></use>
-                        </svg>
+                        <i class="icon iconfont icon-bitian red"></i>
                         承运方
                     </label>
                     <div class="col-sm-3">
@@ -71,9 +68,7 @@
                 </div>
                 <div class="form-group">
                     <label for="inputPassword3" class="col-sm-1 control-label">
-                        <svg class="icon" aria-hidden="true">
-                            <use xlink:href="#icon-bitian"></use>
-                        </svg>
+                        <i class="icon iconfont icon-bitian red"></i>
                         始发地
                     </label>
                     <div class="col-sm-3">
@@ -82,9 +77,7 @@
                 </div>
                 <div class="form-group">
                     <label for="inputPassword3" class="col-sm-1 control-label">
-                        <svg class="icon" aria-hidden="true">
-                            <use xlink:href="#icon-bitian"></use>
-                        </svg>
+                        <i class="icon iconfont icon-bitian red"></i>
                         目的地
                     </label>
                     <div class="col-sm-3">
@@ -93,9 +86,7 @@
                 </div>
                 <div class="form-group">
                     <label for="inputPassword3" class="col-sm-1 control-label">
-                        <svg class="icon" aria-hidden="true">
-                            <use xlink:href="#icon-bitian"></use>
-                        </svg>
+                        <i class="icon iconfont icon-bitian red"></i>
                         舱位代码
                     </label>
                     <div class="col-sm-3">
@@ -105,9 +96,7 @@
 
                 <div class="form-group">
                     <label for="inputPassword3" class="col-sm-1 control-label">
-                        <svg class="icon" aria-hidden="true">
-                            <use xlink:href="#icon-bitian"></use>
-                        </svg>
+                        <i class="icon iconfont icon-bitian red"></i>
                         同步策略
                     </label>
                     <div class="col-sm-3">
@@ -128,6 +117,5 @@
 
    <script type="text/javascript" src="./public/jquery/jquery.js"></script>
    <script type="text/javascript" src="./public/bootstrap/js/bootstrap.js"></script>
-    <script type="text/javascript" src="iconfont.js"></script>
 </body>
 </html>
