--- a/codeshare/newRbdConfig.html
+++ b/codeshare/newRbdConfig.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>newRbdConfig(rbd编辑页)</title>
     <link rel="stylesheet" href="./public/bootstrap/css/bootstrap.css"/>
+    <link rel="stylesheet" href="./public/iconfont/iconfont.css"/>
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
@@ -53,22 +54,21 @@
                         <input type="text" class="form-control" id="inputEmail3" value="CA" readonly="readonly" placeholder="市场方">
                     </div>
                 </div>
-                <div class="form-group">
+                <div class="form-group has-error">
                     <label for="inputPassword3" class="col-sm-2 control-label">
-                        <svg class="icon" aria-hidden="true">
-                            <use xlink:href="#icon-bitian"></use>
-                        </svg>
+                        <i class="icon iconfont icon-bitian red"></i>
                         承运方
                     </label>
                     <div class="col-sm-3">
                         <input type="text" class="form-control" id="inputPassword3" placeholder="承运方">
                     </div>
+                    <div class="err_tip">
+                        这里是错误提示信息
+                    </div>
                 </div>
                 <div class="form-group">
                     <label for="inputPassword3" class="col-sm-2 control-label">
-                        <svg class="icon" aria-hidden="true">
-                            <use xlink:href="#icon-bitian"></use>
-                        </svg>
+                        <i class="icon iconfont icon-bitian red"></i>
                         市场方舱位
                     </label>
                     <div class="col-sm-3">
@@ -77,9 +77,7 @@
                 </div>
                 <div class="form-group">
                     <label for="inputPassword3" class="col-sm-2 control-label">
-                        <svg class="icon" aria-hidden="true">
-                            <use xlink:href="#icon-bitian"></use>
-                        </svg>
+                        <i class="icon iconfont icon-bitian red"></i>
                         承运方舱位
                     </label>
                     <div class="col-sm-3">
@@ -95,9 +93,7 @@
 
                 <div class="form-group">
                     <label for="inputPassword3" class="col-sm-2 control-label">
-                        <svg class="icon" aria-hidden="true">
-                            <use xlink:href="#icon-bitian"></use>
-                        </svg>
+                        <i class="icon iconfont icon-bitian red"></i>
                         市场方规则
                     </label>
                     <div class="col-sm-3">
@@ -107,9 +103,7 @@
 
                 <div class="form-group">
                     <label for="inputPassword3" class="col-sm-2 control-label">
-                        <svg class="icon" aria-hidden="true">
-                            <use xlink:href="#icon-bitian"></use>
-                        </svg>
+                        <i class="icon iconfont icon-bitian red"></i>
                         承运方规则
                     </label>
                     <div class="col-sm-3">
@@ -119,9 +113,7 @@
 
                 <div class="form-group">
                     <label for="inputPassword3" class="col-sm-2 control-label">
-                        <svg class="icon" aria-hidden="true">
-                            <use xlink:href="#icon-bitian"></use>
-                        </svg>
+                        <i class="icon iconfont icon-bitian red"></i>
                         销售生效日期
                     </label>
                     <div class="col-sm-3">
@@ -163,6 +155,6 @@
 
     <script type="text/javascript" src="./public/jquery/jquery.js"></script>
    <script type="text/javascript" src="./public/bootstrap/js/bootstrap.js"></script>
-    <script type="text/javascript" src="iconfont.js"></script>
+    <!--<script type="text/javascript" src="iconfont.js"></script>-->
 </body>
 </html>
